# masters-project

./: .gitignore  Cargo.toml  README.md  flake.nix  job_run.sh  main.cpp
MinCompSpin_ExhaustiveSearch/: Basis_Choice.cpp  Best_MCM.cpp  Data_Manipulation.cpp  LogL_LogE.cpp  MCM_info.cpp  P_s.cpp  main.cpp
MinCompSpin_Greedy/: README.md  job_compile.sh  makefile
MinCompSpin_Greedy/OUTPUT/: Big5_MCM_Greedy_inBest_FullMerging_1min_LOG.txt  MNIST_MCM_Greedy_inBest_FullMerging_15s_LOG.txt
MinCompSpin_Greedy/includes/: default_data.h  library.hpp  main_routines.cpp
MinCompSpin_Greedy/src/MCM/: BestMCM_GreedySearch.cpp  Complexity.cpp  LogE_LogL.cpp  Sampling_fromMCM.cpp  User_Interface.cpp  tools.cpp
OUTPUT/: Big5_MCM_Greedy_inB0_FullMerging_1min_LOG.txt  MNIST_MCM_Greedy_inB0_FullMerging_15s_LOG.txt
includes/: library.hpp
mcm-finder/: Cargo.toml  build.rs
mcm-finder-lib/: Cargo.toml
mcm-finder-lib/benches/: dataset.rs
mcm-finder-lib/examples/: adaptive_annealing.rs  bad_length.rs  evolutionary_search.rs  exhaustive_search.rs  greedy_search.rs  parallel_tempering.rs  showcase_errors.rs  simulated_annealing.rs
mcm-finder-lib/src/: dataset.rs  lib.rs  mcm.rs  mcm_error.rs  solvers.rs
mcm-finder-lib/src/mcm/: icc.rs
mcm-finder-lib/src/solvers/: annealing.rs  custom_annealing.rs  evolutionary.rs  exhaustive.rs  greedy.rs  parallel_tempering.rs  solvers_base.rs
mcm-finder-lib/src/solvers/annealing/: anneal_temps.rs
mcm-finder-lib/tests/: compatability_tests.rs  data_ingress.rs  dataset.rs  minimally_complex_model.rs
mcm-finder-tui/: Cargo.toml
mcm-finder-tui/src/: app.rs  event.rs  main.rs  ui.rs
mcm-finder/cpp_functions/: Complexity.cpp
mcm-finder/src/: lib.rs
mcm-finder/tests/: compatability_tests.rs  data_ingress.rs  minimally_complex_model.rs
proposal/: main.typ
python/: generate_mnist_dataset.py
reports/: weird_vector_partition.html
src/MCM/: BasisTools.cpp  Basis_Choice.cpp  Complexity.cpp  MCM_info.cpp  Operations_OnData.cpp  P_s.cpp  tools.cpp
