[package]
name = "mcm-finder-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
cxx = "1.0.194"
dashmap = { version = "6.2.1", features = ["rayon"] }
fixedbitset = "0.5.7"
kdam = { version = "0.6.4", features = [
    "gradient",
    "rayon",
    "spinner",
    "unicode",
] }
miette = { version = "7.6.0", features = ["fancy"] }
rand = { version = "0.10.1", features = [] }
rayon = "1.12.0"
statrs = "0.18.0"
thiserror = "2.0.18"

[build-dependencies]
cxx-build = "1.0.194"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.8.2", features = ["html_reports"] }
pretty_assertions = "1.4.1"
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"

[[bench]]
name = "dataset"
harness = false

[lints.rust]
refining_impl_trait = "allow"
