[package]
name = "mcm-finder-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
mcm-finder-lib = { path = "../mcm-finder-lib" }
ratatui = "0.30.0"
tokio = { version = "1.52.3", features = ["full"] }
